<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="rafael.alves.sensors.MainActivity">

    <Button
        android:id="@+id/btnSensorList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sensor_list"/>

    <Button
        android:id="@+id/btnLightSensor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/light_sensor"/>

    <Button
        android:id="@+id/btnProxSensor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/proximity_sensor"/>

    <Button
        android:id="@+id/btnAccelSensor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accelerometer_sensor"/>

</LinearLayout>
