<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_accelerometer_sensor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="rafael.alves.sensors.AccelerometerSensorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/isportrait" />

        <TextView
            android:id="@+id/tvIsPortrait"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="YES" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/x_axis" />

        <TextView
            android:id="@+id/tvXAxis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="0.0" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/y_axis" />

        <TextView
            android:id="@+id/tvYAxis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="0.0" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/z_axis" />

        <TextView
            android:id="@+id/tvZAxis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="0.0" />

    </LinearLayout>

</LinearLayout>
